--- a/CheckConstraints/CheckConstraints.csproj
+++ b/CheckConstraints/CheckConstraints.csproj
@@ -4,6 +4,9 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>0.0.2</PackageVersion>
+        <PackageId>Darkarotte.CheckConstraints</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
