--- a/CheckConstraints/CheckConstraints.csproj
+++ b/CheckConstraints/CheckConstraints.csproj
@@ -7,6 +7,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageVersion>0.0.2</PackageVersion>
         <PackageId>Darkarotte.CheckConstraints</PackageId>
+        <RootNamespace>Darkarotte.CheckConstraints</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
